feat: add controlled websig factory provisioning
